# global-agent-hackathon-may-2025

submissions/: .flake8  .gitignore  README.md  pyproject.toml
submissions/backend/: Makefile  config.py  main.py
submissions/backend/agent/: agent.py
submissions/backend/api/: routes.py
submissions/backend/queue/: video_queue.py
submissions/backend/schemas/: schemas.py
submissions/backend/ws/: connection_manager.py  websocket.py
submissions/chrome-extension/: README.md  manifest.json
submissions/chrome-extension/public/: popup.css  popup.html  popup.js  styles.css
submissions/chrome-extension/src/css/: styles.css
submissions/chrome-extension/src/js/: background.js  content.js
submissions/prompts/evaluation/: youtube_video_evaluation.md
